jenkins file added

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,10 +10,10 @@ spring:
     port: 6379
     redis:
       time-to-live: 60000
-resilience4j:
-  circuitbreaker:
+resilience4j.circuitbreaker:
     instances:
-      external:
+      footbalCB:
+        registerHealthIndicator: true
         event-consumer-buffer-size: 10
         failure-rate-threshold: 50
         minimum-number-of-calls: 5
@@ -22,3 +22,14 @@ resilience4j:
         permitted-number-of-calls-in-half-open-state: 3
         sliding-window-size: 10
         sliding-window-type: COUNT_BASED
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+  health:
+    circuitbreakers:
+      enabled: true
