jenkins syntax fix

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -28,8 +28,10 @@ pipeline {
             }
         }
         stage('codeAnalysis') {
-            withSonarQubeEnv(installationName: 'sonar-scanner') {
-                sh './mvnw clean org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.0.2155:sonar'
+            steps {
+                withSonarQubeEnv(installationName: 'sonar-scanner') {
+                    sh './mvnw clean org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.0.2155:sonar'
+                }
             }
         }
         stage('Docker Build') {
