--- a/jenkinsFile
+++ b/jenkinsFile
@@ -6,7 +6,7 @@ pipeline {
     }
     tools {
         jdk 'JDK8'
-        maven 'maven3'
+        maven 'Maven3'
     }
     stages {
         stage('SCM') {
