--- a/jenkinsFile
+++ b/jenkinsFile
@@ -5,7 +5,7 @@ pipeline {
         imageTag = "latest"
     }
     tools {
-        jdk 'JDK11'
+        jdk 'OpenJDK11'
         maven 'Maven3'
     }
     stages {
