--- a/jenkinsFile
+++ b/jenkinsFile
@@ -30,7 +30,7 @@ pipeline {
         stage('codeAnalysis') {
             steps {
                 withSonarQubeEnv(installationName: 'sonar-scanner') {
-                    sh './mvnw clean package org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.0.2155:sonar'
+                    sh './mvnw org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.0.2155:sonar'
                 }
             }
         }
